absoluteni fixed qildim extra site navni ichida va htmlga overflow hidden qildim

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html {
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -125,7 +126,7 @@ header {
 }
 
 .extra-sitenav {
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
   background-color: white;
